# lazyassign

./: README.md  pyproject.toml  ruff.toml
examples/: dynamic.py  simple.py
injection/: __init__.py  compat.py  context.py  importing.py  injection.py
