[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injection"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "bswck", email = "bartoszpiotrslawecki@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.1",
    "ruff>=0.5.5",
]

[tool.hatch.build.targets.wheel]
packages = ["injection/"]
